content/influxdb/v1.5/tools/api_client_libraries.md
---
title: InfluxDB API client libraries
description: InfluxDB API client libraries includes support for Elixir, Go, Haskell, Java, JavaScript/Node.js, Lisp, .Net, Perl, PHP, Python, R, Ruby, Rust, Scala, Sensu, and the SNMP agent.
aliases:
    - influxdb/v1.5/clients/api_client_libraries/
    - influxdb/v1.5/clients/
    - influxdb/v1.5/clients/api
menu:
  influxdb_1_5:
    weight: 30
    parent: Tools
---

InfluxDB client libraries are developed by the open source community. These client libraries support the InfluxDB API and should be fully compatible with InfluxDB version 1.5. Functionality will vary as there are no standard features that all libraries must implement in order to be listed here.

Thanks to the open source community for your contributions, commitment, and effort!

## Elixir

* [Instream (instream)](https://github.com/mneudert/instream)
  * Maintained by [Marc Neudert (mneudert)](https://github.com/mneudert)

## Go

* [InfluxDB Client](https://github.com/influxdb/influxdb/blob/master/client/README.md)
  * Maintained by [InfluxData](https://github.com/influxdata)

## Haskell

* [influxdb-haskell](https://github.com/maoe/influxdb-haskell)
  * Maintained by [Mitsutoshi Aoe (maoe)](https://github.com/maoe)

## Java

* [influxdb-java](https://github.com/influxdb/influxdb-java)
  * Maintained by [Stefan Majer (majst01)](https://github.com/majst01)

## JavaScript/Node.js

* [node-influx](https://github.com/node-influx/node-influx)
  * Maintained by [Ben Evans (bencevans)](https://github.com/bencevans) and [Connor Peet (connor4312)](https://github.com/connor4312)

## Lisp

* [CL-INFLUXDB](https://github.com/mmaul/cl-influxdb)
  * Maintained by [Mike Maul (mmaul)](https://github.com/mmaul)

## .Net

* [InfluxDB.Client.Net](https://github.com/AdysTech/InfluxDB.Client.Net)
  * Maintained by [Adarsha (mvadu)](https://github.com/mvadu)
  * Supports .Net and .Net Core
* [InfluxData.Net](https://github.com/pootzko/InfluxData.Net)
  * Maintained by [Tijhomir Kit (pootzko)](https://github.com/pootzko)
* [InfluxDB Client for .NET](https://github.com/MikaelGRA/InfluxDB.Client)
  * Maintained by [Mikael Guldborg Rask Andersen (MikaelGRA)](https://github.com/MikaelGRA)
* [InfluxClient](https://github.com/danesparza/InfluxClient)
  * Maintained by [Dan Esparza (danesparza)](https://github.com/danesparza)

## Perl

* [AnyEvent::InfluxDB](https://github.com/ajgb/anyevent-influxdb)
  * Maintained by [Alex Burzyński (ajgb)](https://github.com/ajgb)
* [InfluxDB-LineProtocol](http://search.cpan.org/~domm/InfluxDB-LineProtocol/)
  * Maintained by [Thomas Klausner (domm)](https://domm.plix.at/)
* [InfluxDB::HTTP](https://github.com/raphaelthomas/InfluxDB-HTTP)
  * Maintained by [Raphael Seebacher (raphaelthomas)](https://github.com/raphaelthomas)

## PHP

* [influxdb-php](https://github.com/influxdb/influxdb-php)
  * Maintained by [TheCodeAssassin (thecodeassassin)](https://github.com/thecodeassassin) and [Gianluca Arbezzano (gianarb)](https://github.com/gianarb)
* [InfluxDB PHP SDK (influxdb-php-sdk)](https://github.com/corley/influxdb-php-sdk)
  * Maintained by [Corley (corley)](https://github.com/corley)

## Python

* [InfluxDB-Python (influxdb-python)](https://github.com/influxdb/influxdb-python)
  * Maintained by [Alexandre Viau (aviau)](https://github.com/aviau), [xginn8](https://github.com/xginn8), and [Sebastian Borza (sebito91)](https://github.com/sebito91)

## R

* [influxdbr](https://cran.r-project.org/web/packages/influxdbr/)
  * Maintained by [Dominik Leutnant (dleutant)](https://github.com/dleutnant)

## Ruby

* [influxdb-ruby](https://github.com/influxdb/influxdb-ruby)
  * Maintained by [Todd Persen (toddboom)](https://github.com/toddboom) and [Dominik Menke (dmke)](https://github.com/dmke).
* [Influxer (influxer)](https://github.com/palkan/influxer)
  * Maintained by [Vladimir Dementyev (palkan)](https://github.com/palkan).

## Rust

* [Flux (flux)](https://crates.io/crates/flux)
  * Maintained by [Chris Holcombe (cholcombe973)](https://crates.io/users/cholcombe973) and [Chris MacNaughton](https://crates.io/users/ChrisMacNaughton)
* [Influent (influent)](https://crates.io/crates/influent)
  * Maintained by [gobwas](https://crates.io/users/gobwas) and [Eijebong](https://crates.io/users/Eijebong).

## Scala

* [scala-influxdb-client](https://github.com/paulgoldbaum/scala-influxdb-client)
  * Maintained by [Paul Goldbaum (paulgoldbaum)](https://github.com/paulgoldbaum)
* [chronicler](https://github.com/fsanaulla/chronicler)
  * Maintained by [Faiaz Sanaulla (fsanaulla)](https://github.com/fsanaulla)


## Sensu

* [sensu-influxdb-extension](https://github.com/jhrv/sensu-influxdb-extension)
  * Maintained by [Johnny Horvi (jhrv)](https://github.com/jhrv)

## SNMP agent

* [SnmpCollector (snmpcollector)](https://github.com/toni-moreno/snmpcollector)
  * Maintained by [Toni Moreno (toni-moreno)](https://github.com/toni-moreno).
  * A full featured Generic SNMP data collector with Web Administration Interface for InfluxDB.
